# mock-data

./: .editorconfig  .github-workflows-ci.yml  .gitignore  .pylintrc  CONTRIBUTING.md  LICENSE  MANIFEST.in  MIGRATION.md  Makefile  PROJECT_SUMMARY.md  README.md  config.json  mock.py  pyproject.toml  requirements.txt  run  setup.py
config/: config.json
data/: .gitkeep
libs/: mock_data.py  object_id_provider.py  utils.py
libs/providers/: ejson_provider.py  kafka_provider.py  mongodb_provider.py  output_provider.py
output/: example-fruit.ejson  example-scores.ejson
schemas/: BookStore.json  compass-schema.json  fruit.json  scores.json
src/mockdata/: __init__.py  __main__.py
src/mockdata/core/: __init__.py  constants.py  fake_providers.py  mock_data.py  read_schemas.py
src/mockdata/providers/: __init__.py  base.py  base_provider.py  ejson.py  ejson_provider.py  kafka.py  kafka_provider.py  mongodb.py  mongodb_provider.py
src/mockdata/utils/: __init__.py  colors.py  config.py  logging.py  path.py  simple_ai.py
tests/: __init__.py  conftest.py  test_mock_data.py  test_providers.py  test_simple_ai.py  test_utils.py
